registration data saved

--- a/booking/templates/index.html
+++ b/booking/templates/index.html
@@ -24,12 +24,13 @@
             </div>
 
             <div class="form-outline mb-4">
-              <input type="otp" id="typePasswordX-2" class="form-control form-control-lg" placeholder="Enter OTP"/>
+              <input type="text" id="typePasswordX-2" class="form-control form-control-lg" placeholder="Enter OTP" name="otp"/>
               <label class="form-label" for="typePasswordX-2">OTP</label>
             </div>
 
-
             <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+
+            <p>Don't have account. <a href = "http://127.0.0.1:8000/reg">click here</a></p>
 
           </div>
         </div>
