--- a/booking/templates/registration.html
+++ b/booking/templates/registration.html
@@ -18,7 +18,7 @@
             <div class="card-body p-5">
               <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-              <form method="get">
+              <form method="get" action="verify.html">
 
                 <div class="form-outline mb-4">
                   <input type="text" id="form3Example1cg" class="form-control form-control-lg" name="user" />
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="form-outline mb-4">
-                  <input type="mobile" id="form3Example3cg" class="form-control form-control-lg" name = "mobile"/>
+                  <input type="text" id="form3Example3cg" class="form-control form-control-lg" name = "mobile"/>
                   <label class="form-label" for="form3Example3cg">Your Mobile</label>
                 </div>
 
